--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,14 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>메인 페이지</title>
+
+    <!-- bxslider -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('.bxslider').bxSlider({
+                mode: 'horizontal', // or 'vertical', 'fade'
+                auto: true, // auto-start the slider
+                pause: 4000, // pause time between slides
+                touchEnabled: false,
+            });
+        });
+    </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            document.querySelectorAll('.bxslider a').forEach(function (a) {
+                const href = a.getAttribute('href');
+                if (href && !href.match(/^https?:\/\//i)) {
+                    a.setAttribute('href', 'http://' + href);
+                }
+            });
+        });
+    </script>
+
 </head>
 <body>
     <h1>메인 페이지 </h1>
     <div th:replace="/fragments/layout.html :: fragment-body-menu"></div>
 
-    <div>
-        <img src="/files/2021/09/05/6e5170576b0c4c29879e5334dfccab2d.png"/>
-    </div>
+    <ul class="bxslider">
+        <li th:each="banner : ${banners}">
+            <a th:href="${banner.link}" th:target="${banner.openTarget}">
+                <img th:src="@{${banner.urlFilename}}" th:alt="${banner.subject}" th:title="${banner.subject}" />
+            </a>
+        </li>
+    </ul>
 
 </body>
 </html>
